@@ -8,6 +8,7 @@
     :copyright: Copyright 2007-2016 by the Sphinx team, see AUTHORS.
     :license: BSD, see LICENSE for details.
 """
+import codecs
 
 from docutils import nodes
 
@@ -49,19 +50,38 @@ def test_emit_with_nonascii_name_node(app, status, warning):
 
 @with_app()
 def test_output(app, status, warning):
+    # info with newline
     status.truncate(0)  # __init__ writes to status
     status.seek(0)
     app.info("Nothing here...")
     assert status.getvalue() == "Nothing here...\n"
+    # info without newline
     status.truncate(0)
     status.seek(0)
     app.info("Nothing here...", True)
     assert status.getvalue() == "Nothing here..."
 
+    # warning
     old_count = app._warncount
     app.warn("Bad news!")
     assert warning.getvalue() == "WARNING: Bad news!\n"
     assert app._warncount == old_count + 1
+
+
+@with_app()
+def test_output_with_unencodable_char(app, status, warning):
+
+    class StreamWriter(codecs.StreamWriter):
+        def write(self, object):
+            self.stream.write(object.encode('cp1252').decode('cp1252'))
+
+    app._status = StreamWriter(status)
+
+    # info with UnicodeEncodeError
+    status.truncate(0)
+    status.seek(0)
+    app.info(u"unicode \u206d...")
+    assert status.getvalue() == "unicode ?...\n"
 
 
 @with_app()
